--- a/src/assets/sass/_variable.scss
+++ b/src/assets/sass/_variable.scss
@@ -1,5 +1,4 @@
-$primary: #fe9600;
-$secondary: #00b3ba;
+@import "color";
 
 $font-size-gig: 1.4rem;
 $font-size-huge: 1.2rem;
